Fix Overflow

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -154,7 +154,6 @@ html {
 			#sidebar {
 				background: $logogray;
 				color: $white;
-				overflow: hidden;
 
 				a {
 					color: $white;
